[project]
name = "rerun-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imagecodecs==2024.9.22",
    "numcodecs==0.13.1",
    "numpy==1.26.4",
    "pydantic==2.10.0",
    "rerun-sdk==0.21.0",
    "zarr==2.18.2",
]
